# zorviz

./: .gitattributes  CLAUDE.md  Plan.txt  Technical_Architecture.txt  package-lock.json  package.json
.agent/known-issues/: drizzle-sqlite-proxy-mapping.md
.agent/skills/complete-backlog-item/: SKILL.md
apps/desktop/: e2e-booking-inbox.mjs  e2e-drawer-help.mjs  e2e-master-data.mjs  e2e-payables-receivables.mjs  e2e-report-preview.mjs  e2e-restore-drill.mjs  index.html  mock-cloud-restore.mjs  mock-cloud.mjs  package.json  tailwind.config.ts
apps/desktop/data/: zorviz.db-shm  zorviz.db-wal
apps/desktop/src/: App.tsx  brand.css  dyslexia.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/data/: zorviz.db-shm  zorviz.db-wal
apps/desktop/src-tauri/src/: api_data.rs  asset_types.rs  auth.rs  backup.rs  bookings.rs  customers.rs  db.rs  financials.rs  inventory.rs  lib.rs  license.rs  media.rs  restore.rs  server.rs  suppliers.rs
apps/desktop/src/components/: drawer-card.tsx  (+7 more)
docs/: RUST_SETUP.md  brand-logo-brief.md  cloud-backend-architecture.md  cloud-sync-protocol.md  demo-credentials.md
docs/backlog/: README.md  phase-0-completed.md  phase-0-ship-blockers.md  phase-1-backlog.md  phase-1-completed.md  phase-2-backlog.md  phase-2-completed.md  phase-3-backlog.md  phase-3-completed.md  phase-4-backlog.md  phase-4-completed.md  v1-decisions.md
docs/runbooks/: demo.md  pre-ship-checklist.md
lan-server-spike/: .gitignore  Cargo.toml  README.md  index.html  mechanic.html
scripts/demo/: reset.mjs  seed.mjs  start.mjs
(+53 files in other folders)
